# topoGPS

./: .gitignore  LICENSE  README.md  my_plan.json  pyproject.toml  requirements.txt
Scripts/: bench.py  make_figures.py  run_experiments.py  wordnet_bench.py
data/: sample_concepts.txt
docs/: MAPPING.md
experiments/20260303_191140__paper/: RUN_SUMMARY.md  plan_resolved.json  run_meta.json
experiments/20260303_191140__paper/aggregate/: INDEX.json
experiments/20260303_191140__paper/aggregate/synthetic/synthetic_associative__20ea72b8bb/: aggregate.csv  aggregate.json
experiments/20260303_191140__paper/aggregate/synthetic/synthetic_associative__5e193d77ee/: aggregate.csv  aggregate.json
results/paper_assoc/: results.csv
results/paper_assoc/figures/: summary.md
results/paper_assoc/index/: meta.json
results/paper_bridge/: results.csv
results/paper_bridge/figures/: summary.md
results/paper_bridge/index/: meta.json
results/run1/: results.csv
results/run1/figures/: summary.md
results/run1/index/: labels.json
results/run2/: results.csv
results/run2/figures/: summary.md
results/run2/index/: labels.json
results/run3/: results.csv
results/run3/figures/: summary.md
results/run3/index/: labels.json  meta.json
results/run4/: results.csv
results/run4/figures/: summary.md
results/wordnet/: results.csv
results/wordnet/index/: labels.json  meta.json
src/topogps/: __init__.py  cli.py  constraints.py  core.py  embeddings.py  energy.py  graph.py  grid.py  manifold.py  store.py  trace.py  utils.py  visualize.py
tests/: test_build_and_query.py
(+423 files in other folders)
